--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # ignore cache data
-#api_json/*
+api_json/*
 
 # ignore log folder
-#logs/*
+logs/*
 
 # ignore config file
 #config.php
+
+# ignore toplevel_data
+
+toplevel_data/*
 
 # ignore composer lock file
 composer.lock
